调整SSE输出实现